entire flow with success page done

--- a/create-password.html
+++ b/create-password.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign in</title>
+    <title>Create Password</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -18,18 +18,10 @@
       </div>
 
       <div class="container">
-        <h1>Sign in</h1>
-        <p>Enter your details to continue</p>
+        <h1>Create Password</h1>
 
         <form action="">
-          <label for="email">Email Address</label>
-          <input
-            type="email"
-            name="email"
-            id="email"
-            placeholder="name@gmail.com"
-          />
-          <label for="email">Password</label>
+          <label for="email">New Password</label>
           <div class="input">
             <input
               type="password"
@@ -40,15 +32,19 @@
             <a href=""><img src="./images/eye-off.svg" alt="" /></a>
           </div>
 
-          <a href="./reset-password.html">Forgot Password?</a>
+          <label for="email">Confirm New Password</label>
+          <div class="input">
+            <input
+              type="password"
+              name="password"
+              id="password"
+              placeholder="password"
+            />
+            <a href=""><img src="./images/eye-off.svg" alt="" /></a>
+          </div>
 
-          <button>Sign In</button>
+          <button>Reset</button>
         </form>
-
-        <div class="tell">
-          <p class="tell">Don't have an account?</p>
-          <a href="./sign-up.html">Create Account</a>
-        </div>
       </div>
     </div>
   </body>
