--- a/reset-password.html
+++ b/reset-password.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign in</title>
+    <title>Reset Password</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -18,8 +18,8 @@
       </div>
 
       <div class="container">
-        <h1>Sign in</h1>
-        <p>Enter your details to continue</p>
+        <h1>Reset Password</h1>
+        <p>Please enter your email to reset password</p>
 
         <form action="">
           <label for="email">Email Address</label>
@@ -29,26 +29,9 @@
             id="email"
             placeholder="name@gmail.com"
           />
-          <label for="email">Password</label>
-          <div class="input">
-            <input
-              type="password"
-              name="password"
-              id="password"
-              placeholder="password"
-            />
-            <a href=""><img src="./images/eye-off.svg" alt="" /></a>
-          </div>
 
-          <a href="./reset-password.html">Forgot Password?</a>
-
-          <button>Sign In</button>
+          <button>Reset</button>
         </form>
-
-        <div class="tell">
-          <p class="tell">Don't have an account?</p>
-          <a href="./sign-up.html">Create Account</a>
-        </div>
       </div>
     </div>
   </body>
