completed profile page

--- a/profile.html
+++ b/profile.html
@@ -4,8 +4,169 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile</title>
+    <link rel="stylesheet" href="style.css" />
+    <!-- fonts -->
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap');
+    </style>
   </head>
   <body>
-    <div class="profile"></div>
+    <div class="profile">
+      <!-- profile header banner -->
+      <div class="profile-header color3">
+        <div class="avata">
+          <img src="./images/Profileprofile.svg" alt="" />
+        </div>
+        <h3>MamaTee POS Business</h3>
+        <p>posbusiness@email.com</p>
+
+        <!-- switch -->
+
+        <div class="switch">
+          <button>
+            Switch Business <img src="./images/arrow-down.svg" alt="" />
+          </button>
+        </div>
+      </div>
+      <!-- more menues bar -->
+      <div class="menu-grid">
+        <!-- edit profile menu -->
+        <a href="">
+          <div class="edit-profile">
+            <div class="left">
+              <div class="img">
+                <img src="./images/profile.svg" alt="" />
+              </div>
+              <p>Edit <br />profile</p>
+            </div>
+            <div class="right">
+              <img src="./images/Arrow - Right.svg" alt="" />
+            </div>
+          </div>
+        </a>
+        <!-- my business  menu -->
+        <a href=""
+          ><div class="my-business">
+            <div class="left">
+              <div class="img">
+                <img src="./images/Iconlybusinessinformation.svg" alt="" />
+              </div>
+              <p>My Business Information</p>
+            </div>
+            <div class="right">
+              <img src="./images/Arrow - Right.svg" alt="" />
+            </div></div
+        ></a>
+        <!-- Monitored Products menu -->
+        <a href=""
+          ><div class="monitored-products">
+            <div class="left">
+              <div class="img">
+                <img src="./images/Iconlyheartproducts.svg" alt="" />
+              </div>
+              <p>Monitored Products</p>
+            </div>
+            <div class="right">
+              <img src="./images/Arrow - Rightred.svg" alt="" />
+            </div></div
+        ></a>
+        <!-- StyloVault Business menu -->
+        <a href="">
+          <div class="StyloVault-Business">
+            <div class="left">
+              <div class="img">
+                <img src="./images/Iconlygreenbusiness.svg" alt="" />
+              </div>
+              <p>StyloVault Business</p>
+            </div>
+            <div class="right">
+              <img src="./images/Arrow - Rightstylevu.svg" alt="" />
+            </div>
+          </div>
+        </a>
+        <!-- other features menu -->
+        <a href="">
+          <div class="other-features">
+            <div class="left">
+              <div class="img">
+                <img src="./images/Bank Card.svg" alt="" />
+              </div>
+              <p>Other Features</p>
+            </div>
+            <div class="right">
+              <img src="./images/Arrow - Rightgrey.svg" alt="" />
+            </div>
+          </div>
+        </a>
+        <!-- other features menu -->
+        <a href="">
+          <div class="other-features">
+            <div class="left">
+              <div class="img">
+                <img src="./images/Bank Card.svg" alt="" />
+              </div>
+              <p>Other Features</p>
+            </div>
+            <div class="right">
+              <img src="./images/Arrow - Rightgrey.svg" alt="" />
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <!-- other contents -->
+      <div class="others">
+        <h2>Others</h2>
+        <div class="menu-lists">
+          <div class="list">
+            <div class="left">
+              <img src="./images/Security Icon.svg" alt="" />
+              <p>Security</p>
+            </div>
+            <img src="./images/arrow-down.svg" alt="" />
+          </div>
+          <!-- item -->
+          <div class="list">
+            <div class="left">
+              <img src="./images/Verify icon.svg" alt="" />
+              <p>Verification</p>
+            </div>
+            <img src="./images/arrow-down.svg" alt="" />
+          </div>
+          <!-- list -->
+          <div class="list">
+            <div class="left">
+              <img src="./images/Notification icon.svg" alt="" />
+              <p>Notification</p>
+            </div>
+            <img src="./images/arrow-down.svg" alt="" />
+          </div>
+          <!-- itel -->
+          <div class="list">
+            <div class="left">
+              <img src="./images/Security Icon.svg" alt="" />
+              <p>Contact Us</p>
+            </div>
+            <img src="./images/arrow-down.svg" alt="" />
+          </div>
+          <!-- itel -->
+          <div class="list">
+            <div class="left">
+              <img src="./images/Privacy icon.svg" alt="" />
+              <p>Privacy Policy</p>
+            </div>
+            <img src="./images/arrow-down.svg" alt="" />
+          </div>
+          <!-- itel -->
+          <div class="list">
+            <div class="left">
+              <img src="./images/Logout icon.svg" alt="" />
+              <p>Log out</p>
+            </div>
+            <img src="./images/arrow-down.svg" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
