--- a/Homepage.html
+++ b/Homepage.html
@@ -11,7 +11,9 @@
       <!-- header section -->
       <div class="header">
         <div class="logo">
-          <img src="./images/stylovault 6.svg" alt="" />
+          <img class="img" src="./images/image 13.svg" alt="" />
+          <h2 class="primary-text">MamaTee POS Business</h2>
+          <a href="./profile.html"><img src="./images/Vector.svg" alt="" /></a>
         </div>
         <a href="./notification.html"
           ><div class="notification">
