--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
 
         <div class="switch">
           <button>
-            Switch Business <img src="./images/arrow-down.svg" alt="" />
+            Switch Business <img src="./images/arrow-down-icon.svg" alt="" />
           </button>
         </div>
       </div>
