edit my profile completed

--- a/profile.html
+++ b/profile.html
@@ -31,7 +31,7 @@
       <!-- more menues bar -->
       <div class="menu-grid">
         <!-- edit profile menu -->
-        <a href="">
+        <a href="./edit-profile.html">
           <div class="edit-profile">
             <div class="left">
               <div class="img">
