completed single busines info page

--- a/business-info.html
+++ b/business-info.html
@@ -15,16 +15,16 @@
           </div>
         </a>
       </div>
-      <div class="title spread">
+      <div class="title spread down">
         <h3>My Businesses</h3>
 
-        <a href="">
+        <a href="./addbusiness.html">
           <img src="./images/addItem.svg" alt="" />
-          <p>My Businesses</p>
+          <p>Add Business</p>
         </a>
       </div>
       <!-- recent updates -->
-      <div class="success-body">
+      <!-- <div class="success-body full">
         <div class="empty">
           <img src="./images/emptyBusines.svg" alt="" />
         </div>
@@ -33,6 +33,58 @@
           <p>Setup accounts for all your Businesses</p>
           <a href="./addbusiness.html">+ Add a business</a>
         </div>
+      </div> -->
+
+      <!-- with content -->
+      <div class="my-businesses">
+        <!-- item -->
+        <a href="./single-business-info.html">
+          <div class="group item">
+            <div class="entry group">
+              <img src="./images/yam.svg" alt="" />
+              <div class="texts">
+                <h3 class="main">MamaTee POS Business</h3>
+                <p class="small">posbusiness@email.com</p>
+              </div>
+            </div>
+
+            <div class="texts">
+              <img src="./images/arrow-down.svg" alt="" />
+            </div>
+          </div>
+        </a>
+
+        <a href="./single-business-info.html">
+          <div class="group item">
+            <div class="entry group">
+              <img src="./images/yam.svg" alt="" />
+              <div class="texts">
+                <h3 class="main">MamaTee POS Business</h3>
+                <p class="small">posbusiness@email.com</p>
+              </div>
+            </div>
+
+            <div class="texts">
+              <img src="./images/arrow-down.svg" alt="" />
+            </div>
+          </div>
+        </a>
+
+        <a href="./single-business-info.html">
+          <div class="group item">
+            <div class="entry group">
+              <img src="./images/yam.svg" alt="" />
+              <div class="texts">
+                <h3 class="main">MamaTee POS Business</h3>
+                <p class="small">posbusiness@email.com</p>
+              </div>
+            </div>
+
+            <div class="texts">
+              <img src="./images/arrow-down.svg" alt="" />
+            </div>
+          </div>
+        </a>
       </div>
     </div>
   </body>
