added monitored products

--- a/profile.html
+++ b/profile.html
@@ -45,7 +45,7 @@
           </div>
         </a>
         <!-- my business  menu -->
-        <a href=""
+        <a href="./business-info.html"
           ><div class="my-business">
             <div class="left">
               <div class="img">
@@ -58,8 +58,8 @@
             </div></div
         ></a>
         <!-- Monitored Products menu -->
-        <a href=""
-          ><div class="monitored-products">
+        <a href="./monitored.html">
+          <div class="monitored-products">
             <div class="left">
               <div class="img">
                 <img src="./images/Iconlyheartproducts.svg" alt="" />
