added stylovault business screen

--- a/profile.html
+++ b/profile.html
@@ -71,7 +71,7 @@
             </div></div
         ></a>
         <!-- StyloVault Business menu -->
-        <a href="">
+        <a href="./stylovault-biz.html">
           <div class="StyloVault-Business">
             <div class="left">
               <div class="img">
