--- a/profile.html
+++ b/profile.html
@@ -118,53 +118,65 @@
       <div class="others">
         <h2>Others</h2>
         <div class="menu-lists">
-          <div class="list">
-            <div class="left">
-              <img src="./images/Security Icon.svg" alt="" />
-              <p>Security</p>
+          <a href="./security.html">
+            <div class="list">
+              <div class="left">
+                <img src="./images/Security Icon.svg" alt="" />
+                <p>Security</p>
+              </div>
+              <img src="./images/arrow-down.svg" alt="" />
             </div>
-            <img src="./images/arrow-down.svg" alt="" />
-          </div>
+          </a>
           <!-- item -->
-          <div class="list">
-            <div class="left">
-              <img src="./images/Verify icon.svg" alt="" />
-              <p>Verification</p>
+          <a href="">
+            <div class="list">
+              <div class="left">
+                <img src="./images/Verify icon.svg" alt="" />
+                <p>Verification</p>
+              </div>
+              <img src="./images/arrow-down.svg" alt="" />
             </div>
-            <img src="./images/arrow-down.svg" alt="" />
-          </div>
+          </a>
           <!-- list -->
-          <div class="list">
-            <div class="left">
-              <img src="./images/Notification icon.svg" alt="" />
-              <p>Notification</p>
+          <a href="">
+            <div class="list">
+              <div class="left">
+                <img src="./images/Notification icon.svg" alt="" />
+                <p>Notification</p>
+              </div>
+              <img src="./images/arrow-down.svg" alt="" />
             </div>
-            <img src="./images/arrow-down.svg" alt="" />
-          </div>
+          </a>
           <!-- itel -->
-          <div class="list">
-            <div class="left">
-              <img src="./images/Security Icon.svg" alt="" />
-              <p>Contact Us</p>
+          <a href="">
+            <div class="list">
+              <div class="left">
+                <img src="./images/Security Icon.svg" alt="" />
+                <p>Contact Us</p>
+              </div>
+              <img src="./images/arrow-down.svg" alt="" />
             </div>
-            <img src="./images/arrow-down.svg" alt="" />
-          </div>
+          </a>
           <!-- itel -->
-          <div class="list">
-            <div class="left">
-              <img src="./images/Privacy icon.svg" alt="" />
-              <p>Privacy Policy</p>
+          <a href="">
+            <div class="list">
+              <div class="left">
+                <img src="./images/Privacy icon.svg" alt="" />
+                <p>Privacy Policy</p>
+              </div>
+              <img src="./images/arrow-down.svg" alt="" />
             </div>
-            <img src="./images/arrow-down.svg" alt="" />
-          </div>
+          </a>
           <!-- itel -->
-          <div class="list">
-            <div class="left">
-              <img src="./images/Logout icon.svg" alt="" />
-              <p>Log out</p>
+          <a href="">
+            <div class="list">
+              <div class="left">
+                <img src="./images/Logout icon.svg" alt="" />
+                <p>Log out</p>
+              </div>
+              <img src="./images/arrow-down.svg" alt="" />
             </div>
-            <img src="./images/arrow-down.svg" alt="" />
-          </div>
+          </a>
         </div>
       </div>
     </div>
