--- a/security.html
+++ b/security.html
@@ -4,8 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Security</title>
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="e"></div>
+    <div class="security">
+      <div class="nav">
+        <a href="">
+          <div class="back">
+            <img src="./images/arrow-left-black.svg" alt="" />
+          </div>
+        </a>
+      </div>
+      <h3 class="primary-text down">Security</h3>
+
+      <!-- item -->
+      <a href="./change-password.html" class="shadow">
+        <div class="group item">
+          <div class="monitored">
+            <div class="texts">
+              <h3 class="main">Change Password</h3>
+            </div>
+          </div>
+
+          <div class="texts">
+            <img src="./images/arrow-down.svg" alt="" />
+          </div>
+        </div>
+      </a>
+
+      <!-- item -->
+      <a href="./change-pin.html">
+        <div class="group item">
+          <div class="monitored">
+            <div class="texts">
+              <h3 class="main">Change PIN</h3>
+            </div>
+          </div>
+
+          <div class="texts">
+            <img src="./images/arrow-down.svg" alt="" />
+          </div>
+        </div>
+      </a>
+    </div>
   </body>
 </html>
