--- a/change-password.html
+++ b/change-password.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Create Password</title>
+    <title>Change Password</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -18,9 +18,20 @@
       </div>
 
       <div class="container">
-        <h1>Create Password</h1>
+        <h1>Change Password</h1>
 
         <form action="">
+          <label for="email">Old Password</label>
+          <div class="input">
+            <input
+              type="password"
+              name="password"
+              id="password"
+              placeholder="password"
+            />
+            <a href=""><img src="./images/eye-off.svg" alt="" /></a>
+          </div>
+
           <label for="email">New Password</label>
           <div class="input">
             <input
