--- a/request-card.html
+++ b/request-card.html
@@ -18,7 +18,7 @@
       </div>
       <div class="container">
         <h1>Request Card</h1>
-        <p>Select Payment Method</p>
+        <p>Choose a card brand</p>
 
         <form action="">
           <div class="payment-methods">
