working on link flw

--- a/request-card.html
+++ b/request-card.html
@@ -71,11 +71,15 @@
           </div>
           <p class="Soon"><i>*coming soon</i></p>
 
+
+          <p>Card Currency</p>
           <a href="">
             <div class="input request-card-input">
               <p> Nigerian Naira (NGN)</p>
-              <img src="./images/arrow-down.svg" alt="">
+             <div class="norm">
+              <img class="rotate" src="./images/arrow-down.svg" alt="">
              </div>
+          </div>
           </a>
 
           <a class="link-button" href="./request-card-details.html">
