--- a/single-card.html
+++ b/single-card.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Card</title>
+    <title>Card Details</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -19,8 +19,9 @@
       <div class="container">
         <div style="border-radius: 10px" class="card-header down">
           <div class="teal">
-            <img src="./images/Polygon 3.svg" alt="" />
-            <img src="./images/teal.svg" alt="" />
+              <div class=""><p>5061 0000 0000 0123</p></div>
+              <img class="rotate-left" src="./images/teal.svg" alt="" />
+              <img  class="rotate-left" src="./images/Polygon 3.svg" alt="" />
           </div>
           <div class="oths">
             <img src="./images/stylovault5.svg" alt="" />
